- Remove lazy initializer and placeholder code.  Use TypeRefs instead. - Fixed some scheduler bugs. - Use more generics.